--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.1",
+    "@types/node-fetch": "^2.5.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
