--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -8,6 +8,9 @@
       "@books/*": [
         "features/books/*"
       ],
+      "@authentication/*": [
+        "features/authentification/*"
+      ],
       "@images": [
         "ui/assets/images"
       ],
