--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
+    "@types/react-router-config": "^5.0.2",
     "@types/react-router-dom": "^5.1.6",
     "@types/webpack-env": "^1.15.3",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
@@ -55,6 +56,7 @@
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.14.0",
     "react-redux": "^7.2.2",
+    "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0"
