--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -11,6 +11,9 @@
       "@authentication/*": [
         "features/authentification/*"
       ],
+      "@cart/*": [
+        "features/cart/*"
+      ],
       "@images": [
         "ui/assets/images"
       ],
