--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -5,5 +5,6 @@
       "runtime": "automatic"
     }],
     "@babel/preset-typescript"
-  ]
+  ],
+  "plugins": ["@babel/plugin-proposal-export-namespace-from"]
 }
