--- a/frontend/package.json
+++ b/frontend/package.json
@@ -60,6 +60,8 @@
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "util": "^0.12.3",
+    "uuid": "^8.3.2"
   }
 }
