--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -50,6 +50,9 @@
       "@api/*": [
         "api/*"
       ],
+      "@pages": [
+        "pages"
+      ],
       "@pages/*": [
         "pages/*"
       ],
