--- a/backend/package.json
+++ b/backend/package.json
@@ -25,10 +25,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.14",
     "mongoose-paginate-v2": "^1.3.12",
-    "multer": "^1.4.2"
+    "multer": "^1.4.2",
+    "bcrypt": "^5.0.0"
   },
   "devDependencies": {
-    "bcrypt": "^5.0.0",
+
     "concurrently": "^5.3.0",
     "nodemon": "^2.0.6"
   }
