--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -6,5 +6,5 @@
     }],
     "@babel/preset-typescript"
   ],
-  "plugins": ["@babel/plugin-proposal-export-namespace-from"]
+  "plugins": ["@babel/plugin-proposal-export-namespace-from","@babel/plugin-syntax-dynamic-import"]
 }
