--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/plugin-proposal-export-namespace-from": "^7.12.13",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.1",
